--- a/base/src/main/res/values/ids.xml
+++ b/base/src/main/res/values/ids.xml
@@ -23,6 +23,7 @@
     <item name="magnet_filter_genres" type="id" />
     <item name="magnet_filter_a_to_z" type="id" />
     <item name="magnet_filter_release_date" type="id" />
+    <item name="magnet_filter_hd_release_date" type="id" />
     <item name="magnet_filter_top_rated" type="id" />
     <item name="magnet_filter_popular_now" type="id" />
 
