--- a/base/src/main/res/values/drawable.xml
+++ b/base/src/main/res/values/drawable.xml
@@ -26,6 +26,7 @@
     <drawable name="magnet_filter_genres">@android:color/transparent</drawable>
     <drawable  name="magnet_filter_a_to_z">@android:color/transparent</drawable>
     <drawable  name="magnet_filter_release_date">@android:color/transparent</drawable>
+    <drawable  name="magnet_filter_hd_release_date">@android:color/transparent</drawable>
     <drawable  name="magnet_filter_top_rated">@android:color/transparent</drawable>
     <drawable  name="magnet_filter_popular_now">@android:color/transparent</drawable>
 </resources>
