--- a/mobile/src/main/res/layout/media_griditem.xml
+++ b/mobile/src/main/res/layout/media_griditem.xml
@@ -35,13 +35,25 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:scaleType="centerInside"
         android:alpha="0.4"
-        android:src="@drawable/butter_logo" />
+        android:src="@drawable/bktheater_logo" />
 
     <ImageView
         android:id="@+id/cover_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
+
+    <ImageView
+        android:id="@+id/downloaded_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_downloaded"
+        android:visibility="visible"/>
 
     <com.devspark.robototextview.widget.RobotoTextView
         android:id="@+id/year"
