--- a/mobile/src/main/res/layout-w800dp/fragment_moviedetail.xml
+++ b/mobile/src/main/res/layout-w800dp/fragment_moviedetail.xml
@@ -81,7 +81,7 @@
                         android:layout_height="12dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginStart="8dp"
-                        android:id="@+id/downloaded"
+                        android:id="@+id/health"
                         android:src="@drawable/ic_source_online_media"
                         android:scaleType="centerInside"
                         android:visibility="gone"
