--- a/mobile/src/main/res/layout/fragment_dialog_episode_layout.xml
+++ b/mobile/src/main/res/layout/fragment_dialog_episode_layout.xml
@@ -156,7 +156,7 @@
                             android:layout_marginLeft="6dp"
                             android:layout_marginStart="6dp"
                             android:maxWidth="20dp"
-                            android:id="@+id/downloaded"
+                            android:id="@+id/health"
                             android:src="@drawable/ic_source_online_media"
                             android:scaleType="centerInside"
                             android:visibility="gone"
