--- a/base/src/main/res/values/ids.xml
+++ b/base/src/main/res/values/ids.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <item name="yts_filter_a_to_z" type="id" />
-    <item name="yts_filter_genres" type="id" />
-    <item name="yts_filter_year" type="id" />
-    <item name="yts_filter_release_date" type="id" />
-    <item name="yts_filter_top_rated" type="id" />
-    <item name="yts_filter_popular_now" type="id" />
-    <item name="yts_filter_trending" type="id" />
-
-    <item name="eztv_filter_trending" type="id" />
-    <item name="eztv_filter_popular_now" type="id" />
-    <item name="eztv_filter_top_rated" type="id" />
-    <item name="eztv_filter_last_updated" type="id" />
-    <item name="eztv_filter_year" type="id" />
-    <item name="eztv_filter_a_to_z" type="id" />
-
-    <item name="haru_filter_popular" type="id" />
-    <item name="haru_filter_a_to_z" type="id" />
-
     <item name="magnet_filter_genres" type="id" />
     <item name="magnet_filter_a_to_z" type="id" />
     <item name="magnet_filter_release_date" type="id" />
     <item name="magnet_filter_hd_release_date" type="id" />
     <item name="magnet_filter_top_rated" type="id" />
     <item name="magnet_filter_popular_now" type="id" />
+
+    <item name="popcorn_filter_a_to_z" type="id" />
+    <item name="popcorn_filter_genres" type="id" />
+    <item name="popcorn_filter_year" type="id" />
+    <item name="popcorn_filter_release_date" type="id" />
+    <item name="popcorn_filter_top_rated" type="id" />
+    <item name="popcorn_filter_popular_now" type="id" />
+    <item name="popcorn_filter_trending" type="id" />
+    <item name="popcorn_filter_last_updated" type="id" />
+
+    <item name="tvpopcorn_filter_a_to_z" type="id" />
+    <item name="tvpopcorn_filter_genres" type="id" />
+    <item name="tvpopcorn_filter_year" type="id" />
+    <item name="tvpopcorn_filter_release_date" type="id" />
+    <item name="tvpopcorn_filter_top_rated" type="id" />
+    <item name="tvpopcorn_filter_popular_now" type="id" />
+    <item name="tvpopcorn_filter_trending" type="id" />
+    <item name="tvpopcorn_filter_last_updated" type="id" />
 
     <item name="downloaded_filter_all" type="id" />
     <item name="downloaded_filter_watched" type="id" />
