--- a/mobile/src/main/res/layout/fragment_detail_about.xml
+++ b/mobile/src/main/res/layout/fragment_detail_about.xml
@@ -98,8 +98,7 @@
                 android:layout_weight="1"
                 android:gravity="right|center_vertical"
                 android:text="@string/offline_sync"
-                android:textSize="@dimen/detail_meta_text_size"
-                android:autoText="true" />
+                android:textSize="@dimen/detail_meta_text_size"/>
 
         </LinearLayout>
 
