--- a/mobile/src/main/res/xml/syncadapter.xml
+++ b/mobile/src/main/res/xml/syncadapter.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="droid.pc.butter"
-    android:accountType="@string/app_name"
-    android:userVisible="false"
-    android:supportsUploading="false"
+    android:contentAuthority="@string/app_name_authority"
+    android:accountType="@string/app_name_authority"
+    android:userVisible="true"
     android:allowParallelSyncs="false"
-    android:isAlwaysSyncable="true"/>
-
+    android:isAlwaysSyncable="true"
+    android:supportsUploading="false"/>
