--- a/mobile/src/main/res/layout/media_griditem.xml
+++ b/mobile/src/main/res/layout/media_griditem.xml
@@ -43,6 +43,18 @@
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
 
+    <ProgressBar
+        android:id="@+id/progress_download"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:visibility="visible"/>
+
     <ImageView
         android:id="@+id/downloaded_image"
         android:layout_width="wrap_content"
@@ -52,7 +64,7 @@
         android:layout_alignParentRight="true"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:src="@drawable/ic_downloaded"
+        android:src="@drawable/ic_nav_downloaded"
         android:visibility="visible"/>
 
     <com.devspark.robototextview.widget.RobotoTextView
